#ifndef OOP_HEADERS_ACTIONS_H_
#define OOP_HEADERS_ACTIONS_H_

enum class Actions {
    kMoveUp, 
    kMoveDown, 
    kMoveLeft, 
    kMoveRight,
    kQuit,
    kYes,
    kNo,
    kLevel1,
    kLevel2,
    kUnknown
};

#endif 