#ifndef OOP_HEADERS_INPUT_H_
#define OOP_HEADERS_INPUT_H_

class Input {
 public:
    virtual char reader() const = 0;
};

#endif